--- a/.env
+++ b/.env
@@ -12,3 +12,5 @@ APP_DB_PASS=planejadin_pass
 
 # Connection string típica (ex.: backend)
 DATABASE_URL=postgresql://${APP_DB_USER}:${APP_DB_PASS}@localhost:${DB_PORT}/${APP_DB_NAME}?sslmode=disable
+
+GEMINI_API_KEY=AIzaSyC0Kkq8E1DTq_YY0ARAAyD5s0ad64Z0m_g
